# MR_DWI2

./: .gitignore  CMakeLists.txt  InfoHelper.h  displayport.cpp  displayport.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vtkRoiInteractor.cxx  vtkRoiInteractor.h  vtkUDInteractorStyleImage.cxx  vtkUDInteractorStyleImage.h
DicomWidget/: CMakeLists.txt  DicomModule.cpp  DicomModule.ui  QmitkDicomExternalDataWidgetControls.ui  QmitkDicomLocalStorageWidgetControls.ui
DiffusionCore/: CMakeLists.txt  DicomHelper.cpp  DiffusionCore.cpp  DiffusionCore.h  DiffusionCore.ui  InfoHelper.cpp  itkAdcMapFilter.hxx  itkGetDiffusionImageFilter.h  itkGetDiffusionImageFilter.hxx  itkTensor.h  itkTensor.hxx  itkVtkAllHeaders.h  vtkRoiInteractor.cxx  vtkRoiInteractor.h  vtkUDInteractorStyleImage.cxx  vtkUDInteractorStyleImage.h
DisplayCore/: CMakeLists.txt  DisplayHelper.cpp  DisplayHelper.h
PerfusionCore/: CMakeLists.txt  PerfusionCore.cpp  PerfusionCore.h  PerfusionCore.ui  itkPerfusionMapFilter.h  itkPerfusionMapFilter.hxx  perfusionAlgorithm.cpp  perfusionAlgorithm.h
Utility/: CMakeLists.txt  DicomHelper.cpp  DicomHelper.h  displayport.h
darkstyle/: style.qrc  style.qss
